--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,74 @@
     </header>
 
     <main>
+      <div class="conteiner">
+        <section class="ticket">
+          <h1 class="ticket__title">ХУДОЖНІЙ  МУЗЕЙ</h1>
+          <div class="ticket_ticket">
+            <span class="ticket__inskription">КВИТКИ</span>
+            <a class="ticket__link" href="#">
+            </a>
+          </div>
+        </section>
+        <section class="current">
+          <h2 class="current__name">Актуальні події</h2>
+          <div class="current__block">
+            <img
+              class="current__depiction"
+              src="images/current-1.png"
+              alt="current-1"
+            >
+            <div class="current__description">
+              <div class="current__exhibition-block margin">
+                <span class="current__exhibition">ВИСТАВКА</span>
 
+                <a class="current__link" href="#">26.08-29.11.2019</a>
+              </div>
+
+              <h3 class="current__title current__title-square margin">Йду i повертаюсь</h3>
+
+              <p class="current_paragraph">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+
+          <div class="current__block">
+            <img
+              class="current__depiction"
+              src="images/current-2.png"
+              alt="current-1"
+            >
+            <div class="current__description">
+              <div class="current__exhibition-block margin">
+                <span class="current__exhibition">ВИСТАВКА</span>
+
+                <a class="current__link" href="#">26.08-29.11.2019</a>
+              </div>
+
+              <h3 class="current__title current__title-square margin"> I спогади i мрії</h3>
+
+              <p class="current_paragraph">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
+
+          <div class="current__block">
+            <img
+              class="current__depiction"
+              src="images/current-3.png"
+              alt="current-1"
+            >
+            <div class="current__description current__description-card">
+              <div class="current__exhibition-block current__exhibition-block-mod">
+                <span class="current__exhibition">ЛЕКЦІЯ</span>
+
+                <a class="current__link" href="#">26/08/2019 - 11:00</a>
+              </div>
+
+              <h3 class="current__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+
+        </section>
+      </div>
     </main>
     <footer>
 
