--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/_utils.scss">
+    <link rel="stylesheet" href="./styles/_main.scss">
   </head>
   <body>
     <header class="header">
@@ -107,26 +107,26 @@
 
               <p class="current_paragraph">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
             </div>
+
           </div>
-
-          <div class="current__block">
-            <img
-              class="current__depiction"
-              src="images/current-3.png"
-              alt="current-1"
-            >
-            <div class="current__description current__description-card">
-              <div class="current__exhibition-block current__exhibition-block-mod">
-                <span class="current__exhibition">ЛЕКЦІЯ</span>
-
-                <a class="current__link" href="#">26/08/2019 - 11:00</a>
-              </div>
-
-              <h3 class="current__title">Від класицизму до романтизму</h3>
-            </div>
-          </div>
-
         </section>
+      </div>
+
+      <div class="current__block">
+        <img
+          class="current__depiction"
+          src="images/current-3.png"
+          alt="current-1"
+        >
+        <div class="current__description current__description-card">
+          <div class="current__exhibition-block current__exhibition-block-mod">
+            <span class="current__exhibition">ЛЕКЦІЯ</span>
+
+            <a class="current__link" href="#">26/08/2019 - 11:00</a>
+          </div>
+
+          <h3 class="current__title">Від класицизму до романтизму</h3>
+        </div>
       </div>
     </main>
     <footer>
