--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@400;500;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700;800;900&family=Inter:wght@400;700;800;900&family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./styles/main.scss">
     <!-- <link rel="stylesheet" href="./main.css"> -->
@@ -20,8 +20,8 @@
     >
   </head>
 
-  <body class="page">
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body>
+    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
 
     <!-- HEADER -->
     <header class="header" id="header">
@@ -39,7 +39,7 @@
             grid__item--tablet-4-5
             grid__item--desktop-6-7"
           >
-            <a href="https://www.instagram.com/namu.museum/" class="logo logo--header">
+            <a href="#" class="logo logo--header">
               na<br>mu
             </a>
           </div>
@@ -58,15 +58,19 @@
           <div class="grid grid--screen">
             <div class="grid__item--desktop-3-5"
             >
-              <div class="header__tickets">
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="header__tickets"
+                target="_blank"
+              >
                 <div class="header__tickets-title">
                   квитки
                 </div>
 
-                <a href="https://www.instagram.com/namu.museum/" class="header__tickets-arrow-container">
+                <div class="header__tickets-arrow-container">
                   <div class="header__tickets-arrow"></div>
-                </a>
-              </div>
+                </div>
+              </a>
             </div>
           </div>
 
@@ -163,7 +167,7 @@
     </section>
 
     <!-- TITLE-BLOCK -->
-    <div class="title-block">
+    <div class="title-block" id="events">
       <div class="arc">
         Актуальні події
       </div>
@@ -171,18 +175,22 @@
 
     <!-- EVENT`s -->
     <div class="arc">
-      <section class="events" id="events">
+      <section class="events">
         <div class="grid grid--screen">
           <div class="
             grid__item--desktop-1-7
             grid__item--tablet-1-6"
           >
-            <div class="events__photo-container">
+            <a
+              href="https://namu.ua/"
+              class="events__photo-container"
+              target="_blank"
+            >
               <img
                 src="./images/Rectangle-2.3.jpg"
                 alt="Йду і повертаюсь"
                 class="events__photo">
-            </div>
+            </a>
           </div>
 
           <div class="
@@ -201,7 +209,11 @@
                   </div>
                 </div>
 
-                <a href="https://namu.ua/" class="events__details-block">
+                <a
+                  href="https://namu.ua/"
+                  class="events__details-block"
+                  target="_blank"
+                >
                   <div class="events__title-container">
                     <div class="events__title">
                       Йду і повертаюсь
@@ -226,12 +238,16 @@
             grid__item--desktop-1-7
             grid__item--tablet-1-6"
           >
-            <div class="events__photo-container">
+            <a
+              href="https://namu.ua/"
+              class="events__photo-container"
+              target="_blank"
+            >
               <img
                 src="./images/Rectangle-4.3.jpg"
                 alt="І спогади і мрії"
                 class="events__photo">
-            </div>
+            </a>
           </div>
 
           <div class="
@@ -250,7 +266,11 @@
                   </div>
                 </div>
 
-                <a href="https://namu.ua/" class="events__details-block">
+                <a
+                  href="https://namu.ua/"
+                  class="events__details-block"
+                  target="_blank"
+                >
                   <div class="events__title-container">
                     <div class="events__title">
                       І спогади і мрії
@@ -275,7 +295,11 @@
       <div class="lection__container">
         <div class="lection__photo">
 
-          <a href="https://namu.ua/" class="lection__description-container">
+          <a
+            href="https://namu.ua/"
+            class="lection__description-container"
+            target="_blank"
+          >
             <div class="lection__description-block">
               <div class="lection__date-block">
                 <div class="lection__name">
@@ -301,7 +325,7 @@
     </section>
 
     <!-- TITLE-BLOCK -->
-    <div class="title-block">
+    <div class="title-block" id="gallery">
       <div class="arc">
         Галерея
       </div>
@@ -309,16 +333,24 @@
 
     <!-- GALLERY -->
     <div class="arc">
-      <section class="gallery" id="gallery">
+      <section class="gallery">
         <div class="gallery__photo-row">
           <div class="grid__item--desktop-1-4">
-            <a href="https://namu.ua/" class="gallery__link">
+            <a
+              href="https://namu.ua/"
+              class="gallery__link"
+              target="_blank"
+            >
               <div class="gallery__photo-container gallery--photo-1"></div>
             </a>
           </div>
 
           <div class="grid__item--desktop-5-12">
-            <a href="https://namu.ua/" class="gallery__link">
+            <a
+              href="https://namu.ua/"
+              class="gallery__link"
+              target="_blank"
+            >
               <div class="gallery__photo-container gallery--photo-2"></div>
             </a>
           </div>
@@ -326,13 +358,21 @@
 
         <div class="gallery__photo-row gallery__photo-row--second">
           <div class="grid__item--desktop-1-8">
-            <a href="https://namu.ua/" class="gallery__link">
+            <a
+              href="https://namu.ua/"
+              class="gallery__link"
+              target="_blank"
+            >
               <div class="gallery__photo-container gallery--photo-3"></div>
             </a>
           </div>
 
           <div class="grid__item--desktop-9-12">
-            <a href="https://namu.ua/" class="gallery__link">
+            <a
+              href="https://namu.ua/"
+              class="gallery__link"
+              target="_blank"
+            >
               <div class="gallery__photo-container gallery--photo-4"></div>
             </a>
           </div>
@@ -359,17 +399,18 @@
       <div class="subscribe__area">
         <form
           name="subscribe"
-          action="http://localhost:3000/api"
+          action="#"
           method="get"
           class="subscribe__form"
         >
 
           <div class="subscribe__input-container">
             <input
-              type="text"
+              type="email"
               name="subscribe-input"
               class="subscribe__input"
               placeholder="E-mail"
+              required
             >
           </div>
 
@@ -392,13 +433,22 @@
               grid__item--desktop-1-1"
             >
               <div class="footer__brand">
-                <a href="https://www.instagram.com/namu.museum/" class="logo logo--footer">
+                <a href="#" class="logo logo--footer">
                   na<br>mu
                 </a>
 
                 <div class="footer__social-media">
-                  <a href="#" class="icon icon--facebook"></a>
-                  <a href="#" class="icon icon--instagram"></a>
+                  <a
+                    href="https://www.facebook.com/namu.museum/ "
+                    class="icon icon--facebook"
+                    target="_blank"
+                  ></a>
+
+                  <a
+                    href="https://www.instagram.com/namu.museum/"
+                    class="icon icon--instagram"
+                    target="_blank"
+                  ></a>
                 </div>
               </div>
             </div>
@@ -430,7 +480,7 @@
 
                 <!-- SCHEDULE-BLOCK -->
                 <div class="schedule-block schedule-block--footer">
-                  <div class="schedule-block__title">
+                  <div class="schedule-block__title" id="contacts">
                     Контакти
                   </div>
 
@@ -440,10 +490,34 @@
                       schedule-block__time--footer
                       schedule-block__time--footer-arrow"
                     >
-                      вул. М. Грушевського, 6; Київ, 01001<br>
-                      тел. +38 (044) 278&#8209;13&#8209;57<br>
-                      факс +38 (044) 278&#8209;74&#8209;54<br>
-                      e-mail: info@namu.kiev.ua
+                      <a
+                        href="https://goo.gl/maps/L2x1WX7LZbcgLTLYA"
+                        class="schedule-block__links"
+                        target="_blank"
+                      >
+                        вул. М. Грушевського, 6; Київ, 01001
+                      </a>
+
+                      <a
+                        href="tel:+380442781357"
+                        class="schedule-block__links"
+                      >
+                        тел. +38 (044) 278&#8209;13&#8209;57<br>
+                      </a>
+
+                      <a
+                        href="tel:+380442787454"
+                        class="schedule-block__links"
+                      >
+                        факс +38 (044) 278&#8209;74&#8209;54<br>
+                      </a>
+
+                      <a
+                        href="mailto:info@namu.kiev.ua"
+                        class="schedule-block__links"
+                      >
+                        e-mail: info@namu.kiev.ua
+                      </a>
                     </div>
                   </div>
 
@@ -471,13 +545,13 @@
                 <ul class="nav-block__list">
                   <div class="nav-block__group nav-block__group--footer">
                     <li class="nav-block__item">
-                      <a href="#" class="nav-block__link nav-block__link--footer">
+                      <a href="#gallery" class="nav-block__link nav-block__link--footer">
                         Галерея
                       </a>
                     </li>
 
                     <li class="nav-block__item">
-                      <a href="#" class="nav-block__link nav-block__link--footer">
+                      <a href="#events" class="nav-block__link nav-block__link--footer">
                         Виставки та події
                       </a>
                     </li>
@@ -485,13 +559,13 @@
 
                   <div class="nav-block__group nav-block__group--footer">
                     <li class="nav-block__item">
-                      <a href="#" class="nav-block__link nav-block__link--footer">
+                      <a href="#subscribe" class="nav-block__link nav-block__link--footer">
                         Про нас
                       </a>
                     </li>
 
                     <li class="nav-block__item">
-                      <a href="#" class="nav-block__link nav-block__link--footer">
+                      <a href="#contacts" class="nav-block__link nav-block__link--footer">
                         Контакти
                       </a>
                     </li>
