--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
+    <script type="text/javascript" src="scripts/main.js"></script>
 
     <!-- HEADER -->
     <header class="header" id="header">
