add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/_main.scss">
+    <script src="./scripts/main.js" defer></script>
   </head>
   <body>
-    <header class="header">
+    <header id="header" class="header">
       <img
         class="header_background"
         src="images/muzei-background.png"
@@ -28,15 +29,15 @@
           <a class="header__close" href="#"></a>
           <div class="header_menu-puncts">
             <div class="header__items one-column">
-              <a class="header__link" href="#">Галерея</a>
+              <a class="header__link" href="#gallery">Галерея</a>
 
-              <a class="header__link" href="#">Виставки та <br> події</a>
+              <a class="header__link" href="#actual">Виставки та <br> події</a>
             </div>
 
             <div class="header__items two-column ">
-              <a class="header__link" href="#">Про Нас</a>
+              <a class="header__link" href="#footer">Про Нас</a>
 
-              <a class="header__link" href="#">Контакти</a>
+              <a class="header__link" href="#footer">Контакти</a>
             </div>
           </div>
           <div class="header__line"></div>
@@ -69,7 +70,7 @@
             </a>
           </div>
         </section>
-        <section class="current">
+        <section id="actual" class="current">
           <h2 class="current__name">Актуальні події</h2>
           <div class="current__block">
             <img
@@ -128,9 +129,133 @@
           <h3 class="current__title">Від класицизму до романтизму</h3>
         </div>
       </div>
+      <section id="gallery" class="gallery">
+        <h3 class="gallery__title">Галерея</h3>
+        <div class="gallery__slider">
+          <img
+            src="images/gallery/gallery-1.png"
+            alt="gallery"
+            class="gallery__image"
+          >
+          <img
+            src="images/gallery/gallery-2.png"
+            alt="gallery"
+            class="gallery__image"
+          >
+          <img
+            src="images/gallery/gallery-3.png"
+            alt="gallery"
+            class="gallery__image"
+          >
+          <img
+            src="images/gallery/gallery-4.png"
+            alt="gallery"
+            class="gallery__image"
+          >
+        </div>
+        <div class="gallery__items">
+          <span class="gallery__item"></span>
+          <span class="gallery__item"></span>
+          <span class="gallery__item"></span>
+          <span class="gallery__item"></span>
+        </div>
+      </section>
+      <section class="subscription">
+        <h2 class="subscription__title">Підписка</h2>
+        <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form
+          class="subscription__form"
+          action="http://localhost:8080/"
+          method="POST"
+        >
+          <input
+            class="subscription__input"
+            type="email"
+            name="email"
+            placeholder="E-mail"
+            required
+          >
+          <button class="subscription__button" type="submit"></button>
+        </form>
+      </section>
     </main>
-    <footer>
+    <footer id="footer" class="footer">
+      <section class="footer__icons">
+        <a class="footer__logo" href="#">
+          <img src="images/logo-museum.png" alt="logo muzeum">
+        </a>
 
+        <div class="footer__socials">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/namu.museum/"
+            class="footer__social"
+          >
+            <img src="./images/icons/Facebook.png" alt="Facebook">
+          </a>
+
+          <a
+            target="_blank"
+            href="https://www.instagram.com/namu.museum/"
+            class="footer__social"
+          >
+            <img src="./images/icons/instagram.png" alt="instagram">
+          </a>
+        </div>
+      </section>
+
+      <section class="footer__data">
+        <section class="footer__graph">
+          <h4 class="footer__title">Графік роботи</h4>
+
+          <p class="footer__time-work">
+            <strong>12:00— 20:00</strong> середа <br>
+            <strong>12:00 — 20:00</strong> четвер <br>
+            <strong>12:00 — 20:00</strong> п’ятниця <br>
+            <strong>11:00 — 19:00</strong> субота <br>
+            <strong>11:00 — 19:00</strong> неділя
+          </p>
+
+          <p class="footer__holiday">
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </section>
+
+        <section class="footer__contacts">
+          <h4 class="footer__title">Контакти:</h4>
+
+          <p class="footer__address">
+            вул. М. Грушевського, 6; Київ, 01001
+            тел. +38 (044) 278-13-57
+            факс +38 (044) 278-74-54
+            e-mail: info@namu.kiev.ua
+          </p>
+        </section>
+      </section>
+
+      <a href="#header" class="footer__circle"></a>
+
+      <div class="footer__line"></div>
+
+      <section class="footer__links">
+        <div class="footer__items footer__items-one-column">
+          <a class="footer__link" href="#gallery">Галерея</a>
+
+          <a class="footer__link" href="#actual">Виставки та події</a>
+        </div>
+
+        <div class="footer__items footer__items-two-column ">
+          <a class="footer__link" href="#footer">Про Нас</a>
+
+          <a class="footer__link" href="#footer">Контакти</a>
+        </div>
+      </section>
+      <section class="footer__captcha">
+        <p class="footer__copiright">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__designed">Designed by Zhyriada Marina</p>
+      </section>
     </footer>
   </body>
 </html>
