--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/_main.scss">
+    <link rel="stylesheet" href="styles/_main.scss">
     <script src="./scripts/main.js" defer></script>
   </head>
   <body>
