--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,140 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>namu</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="shortcut icon"
+      type="image/png"
+      href="./images/320/icon.ico"
+    >
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <section class="menu"></section>
+    <!-- main -->
+    <section class="main-page" id="main">
+      <div class="main-page__container">
+        <div class="main-page__header">
+          <a href="#menu" class="main-page__menu"></a>
+          <a class="main-page__logo" href="#">NA<br>MU</a>
+        </div>
+        <picture class="main-page__img">
+          <source media="(min-width: 1280px)" srcset="./images/1280/01.png">
+          <source media="(min-width: 768px)" srcset="./images/768/01.png">
+          <img src="./images/320/01.png" alt="Museum">
+        </picture>
+        <div class="main-page__info">
+          <h1 class="main-page__title title">художній музей</h1>
+          <a href="#" class="main-page__btn">
+            квитки
+          </a>
+        </div>
+      </div>
+
+    </section>
+    <!-- events -->
+    <section class="events" id="events">
+      <div class="events__container">
+        <h2 class="events__title title">
+          Aктуальні події
+        </h2>
+        <div class="events__card card">
+          <picture class="card__img">
+            <source media="(min-width: 1280px)" srcset="./images/1280/02.png">
+            <source media="(min-width: 768px)" srcset="./images/768/02.png">
+            <img src="./images/320/02.png" alt="picture">
+          </picture>
+          <div class="card__subtitle subtitle">
+            <p class="subtitle__event">ВИСТАВКА</p>
+            <p class="subtitle__date">26.08-29.11.2019</p>
+          </div>
+          <h3 class="card__title">
+            Йду i повертаюсь
+          </h3>
+          <p class="card__text">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої
+            половини 1980-1995 років.
+          </p>
+        </div>
+        <div class="events__card card">
+          <picture class="card__img">
+            <source media="(min-width: 1280px)" srcset="./images/1280/03.png">
+            <source media="(min-width: 768px)" srcset="./images/768/03.png">
+            <img src="./images/320/03.png" alt="picture">
+          </picture>
+          <div class="card__subtitle subtitle">
+            <p class="subtitle__event">ВИСТАВКА</p>
+            <p class="subtitle__date">26.08-29.11.2019</p>
+          </div>
+          <h3 class="card__title title">
+            I спогади i мрії
+          </h3>
+          <p class="card__text">
+            Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської
+            відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+          </p>
+        </div>
+        <div class="events__advert">
+          <picture class="events__img">
+            <source media="(min-width: 1280px)" srcset="./images/1280/04.png">
+            <source media="(min-width: 768px)" srcset="./images/768/04.png">
+            <img src="./images/320/04.png" alt="picture">
+          </picture>
+          <div class="events__box">
+            <div class="events__subtitle subtitle">
+              <p class="subtitle__event">лекція</p>
+              <p class="subtitle__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="events__name ">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- gallery -->
+    <section class="gallery" id="gallery">
+      <div class="gallery__container">
+        <h3 class="gallery__title title">
+          Галерея
+        </h3>
+
+        <div class="gallery__slider slider__container">
+          <img src="./images/320/05.png"
+          alt="picture" class="gallery__p">
+        </div>
+        
+        <div class="gallery__box gallery__container">
+          <img src="./images/1280/05.png"
+          alt="picture" class="gallery__p1">
+          <img src="./images/1280/05.1.png"
+          alt="picture" class="gallery__p2">
+          <img src="./images/1280/05.2.png"
+          alt="picture" class="gallery__p3">
+          <img src="./images/1280/05.3.png"
+          alt="picture" class="gallery__p4">
+        </div>
+
+      </div>
+    </section>
+    <!-- subscribe -->
+    <section class="subscribe">
+      <div class="subscribe__container">
+        <h3 class="subscribe__title title">
+          Підписка
+        </h3>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <input type="email"
+          class="subscribe__input"
+          placeholder="E-mail">
+        </input>
+        <button class="subscribe__btn" type="submit">
+          <img src="./images/320/arrow.svg" alt="arrow">
+        </button>
+      </div>
+    </section>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
+
