--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
 
     <!-- HEADER -->
     <header class="header" id="header">
@@ -80,7 +80,7 @@
     </header>
 
     <!-- MENU -->
-    <section class="page__menu menu" id="menu">
+    <div class="page__menu menu" id="menu">
       <div class="menu__container">
         <div class="arc">
           <div class="menu__content">
@@ -98,33 +98,31 @@
                   <!-- NAV-BLOCK -->
                   <nav class="nav-block">
                     <ul class="nav-block__list">
-                      <div class="nav-block__group">
-                        <li class="nav-block__item">
-                          <a href="#gallery" class="nav-block__link">
-                            Галерея
-                          </a>
-                        </li>
+                      <li class="nav-block__item">
+                        <a href="#gallery" class="nav-block__link">
+                          Галерея
+                        </a>
+                      </li>
 
-                        <li class="nav-block__item">
-                          <a href="#events" class="nav-block__link">
-                            Виставки та події
-                          </a>
-                        </li>
-                      </div>
+                      <li class="nav-block__item">
+                        <a href="#events" class="nav-block__link">
+                          Виставки та події
+                        </a>
+                      </li>
+                    </ul>
 
-                      <div class="nav-block__group">
-                        <li class="nav-block__item">
-                          <a href="#subscribe" class="nav-block__link">
-                            Про нас
-                          </a>
-                        </li>
+                    <ul class="nav-block__list">
+                      <li class="nav-block__item">
+                        <a href="#subscribe" class="nav-block__link">
+                          Про нас
+                        </a>
+                      </li>
 
-                        <li class="nav-block__item">
-                          <a href="#footer" class="nav-block__link">
-                            Контакти
-                          </a>
-                        </li>
-                      </div>
+                      <li class="nav-block__item">
+                        <a href="#contacts" class="nav-block__link">
+                          Контакти
+                        </a>
+                      </li>
                     </ul>
                   </nav>
                 </div>
@@ -136,7 +134,7 @@
               >
                 <div class="menu__right-block">
                   <!-- SCHEDULE-BLOCK -->
-                  <section class="schedule-block">
+                  <div class="schedule-block">
                     <div class="schedule-block__title">
                       Графік роботи
                     </div>
@@ -155,7 +153,7 @@
                         Каса припиняє роботу за 1 годину до закриття музею
                       </div>
                     </div>
-                  </section>
+                  </div>
                 </div>
               </div>
             </div>
@@ -164,125 +162,127 @@
       </div>
 
       <div class="menu__grey-zone"></div>
-    </section>
-
-    <!-- TITLE-BLOCK -->
-    <div class="title-block" id="events">
-      <div class="arc">
-        Актуальні події
-      </div>
     </div>
 
     <!-- EVENT`s -->
     <div class="arc">
       <section class="events">
-        <div class="grid grid--screen">
-          <div class="
-            grid__item--desktop-1-7
-            grid__item--tablet-1-6"
-          >
-            <a
-              href="https://namu.ua/"
-              class="events__photo-container"
-              target="_blank"
+        <!-- TITLE-BLOCK -->
+        <h2 class="title-block" id="events">
+          Актуальні події
+        </h2>
+
+        <div class="events__article">
+          <div class="grid grid--screen">
+            <div class="
+              grid__item--desktop-1-7
+              grid__item--tablet-1-6
+              grid--events-margin-bottom"
             >
-              <img
-                src="./images/Rectangle-2.3.jpg"
-                alt="Йду і повертаюсь"
-                class="events__photo">
-            </a>
-          </div>
+              <a
+                href="https://namu.ua/"
+                class="events__photo-container"
+                target="_blank"
+              >
+                <img
+                  src="./images/Rectangle-2.3.jpg"
+                  alt="Йду і повертаюсь"
+                  class="events__photo">
+              </a>
+            </div>
 
-          <div class="
-            grid__item--desktop-9-12
-            grid__item--tablet-1-4"
-          >
-            <div class="events__description-container">
-              <div class="events__description-block">
-                <div class="events__date-block">
-                  <div class="events__name">
-                    ВИСТАВКА
-                  </div>
-
-                  <div class="events__date">
-                    26.08-29.11.2019
-                  </div>
-                </div>
-
-                <a
-                  href="https://namu.ua/"
-                  class="events__details-block"
-                  target="_blank"
-                >
-                  <div class="events__title-container">
-                    <div class="events__title">
-                      Йду і повертаюсь
+            <div class="
+              grid__item--desktop-9-12
+              grid__item--tablet-1-4"
+            >
+              <div class="events__description-container">
+                <div class="events__description-block">
+                  <div class="events__date-block">
+                    <div class="events__name">
+                      ВИСТАВКА
                     </div>
 
-                    <div class="events__orange-rectangle"></div>
+                    <div class="events__date">
+                      26.08-29.11.2019
+                    </div>
                   </div>
 
-                  <div class="events__description">
-                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-                  </div>
-                </a>
+                  <a
+                    href="https://namu.ua/"
+                    class="events__details-block"
+                    target="_blank"
+                  >
+                    <div class="events__title-container">
+                      <div class="events__title">
+                        Йду і повертаюсь
+                      </div>
+
+                      <div class="events__orange-rectangle"></div>
+                    </div>
+
+                    <div class="events__description">
+                      Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                    </div>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
 
-      <section class="events">
-        <div class="grid grid--screen">
-          <div class="
-            grid__item--desktop-1-7
-            grid__item--tablet-1-6"
-          >
-            <a
-              href="https://namu.ua/"
-              class="events__photo-container"
-              target="_blank"
+        <div class="events__article">
+          <div class="grid grid--screen">
+            <div class="
+              grid__item--desktop-1-7
+              grid__item--tablet-1-6
+              grid--events-margin-bottom"
             >
-              <img
-                src="./images/Rectangle-4.3.jpg"
-                alt="І спогади і мрії"
-                class="events__photo">
-            </a>
-          </div>
+              <a
+                href="https://namu.ua/"
+                class="events__photo-container"
+                target="_blank"
+              >
+                <img
+                  src="./images/Rectangle-4.3.jpg"
+                  alt="І спогади і мрії"
+                  class="events__photo">
+              </a>
+            </div>
 
-          <div class="
-            grid__item--desktop-9-12
-            grid__item--tablet-1-4"
-          >
-            <div class="events__description-container">
-              <div class="events__description-block">
-                <div class="events__date-block">
-                  <div class="events__name">
-                    ВИСТАВКА
-                  </div>
-
-                  <div class="events__date">
-                    26.08-29.11.2019
-                  </div>
-                </div>
-
-                <a
-                  href="https://namu.ua/"
-                  class="events__details-block"
-                  target="_blank"
-                >
-                  <div class="events__title-container">
-                    <div class="events__title">
-                      І спогади і мрії
+            <div class="
+              grid__item--desktop-9-12
+              grid__item--tablet-1-4"
+            >
+              <div class="events__description-container">
+                <div class="events__description-block">
+                  <div class="events__date-block">
+                    <div class="events__name">
+                      ВИСТАВКА
                     </div>
 
-                    <div class="events__orange-rectangle"></div>
+                    <div class="events__date">
+                      26.08-29.11.2019
+                    </div>
                   </div>
 
-                  <div class="events__description">
-                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                  </div>
-                </a>
+                  <a
+                    href="https://namu.ua/"
+                    class="events__details-block"
+                    target="_blank"
+                  >
+                    <div class="events__title-container">
+                      <div class="events__title">
+                        І спогади і мрії
+                      </div>
+
+                      <div class="events__orange-rectangle"></div>
+                    </div>
+
+                    <div class="events__description">
+                      Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                    </div>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -291,7 +291,7 @@
     </div>
 
     <!-- LECTION -->
-    <section class="lection" id="lection">
+    <div class="lection" id="lection">
       <div class="lection__container">
         <div class="lection__photo">
 
@@ -322,59 +322,59 @@
           </a>
         </div>
       </div>
-    </section>
-
-    <!-- TITLE-BLOCK -->
-    <div class="title-block" id="gallery">
-      <div class="arc">
-        Галерея
-      </div>
     </div>
 
     <!-- GALLERY -->
     <div class="arc">
       <section class="gallery">
-        <div class="gallery__photo-row">
-          <div class="grid__item--desktop-1-4">
-            <a
-              href="https://namu.ua/"
-              class="gallery__link"
-              target="_blank"
-            >
-              <div class="gallery__photo-container gallery--photo-1"></div>
-            </a>
+        <!-- TITLE-BLOCK -->
+        <h2 class="title-block" id="gallery">
+          Галерея
+        </h2>
+
+        <div class="gallery__container">
+          <div class="gallery__photo-row">
+            <div class="grid__item--desktop-1-4">
+              <a
+                href="https://namu.ua/"
+                class="gallery__link"
+                target="_blank"
+              >
+                <div class="gallery__photo-container gallery--photo-1"></div>
+              </a>
+            </div>
+
+            <div class="grid__item--desktop-5-12">
+              <a
+                href="https://namu.ua/"
+                class="gallery__link"
+                target="_blank"
+              >
+                <div class="gallery__photo-container gallery--photo-2"></div>
+              </a>
+            </div>
           </div>
 
-          <div class="grid__item--desktop-5-12">
-            <a
-              href="https://namu.ua/"
-              class="gallery__link"
-              target="_blank"
-            >
-              <div class="gallery__photo-container gallery--photo-2"></div>
-            </a>
-          </div>
-        </div>
+          <div class="gallery__photo-row gallery__photo-row--second">
+            <div class="grid__item--desktop-1-8">
+              <a
+                href="https://namu.ua/"
+                class="gallery__link"
+                target="_blank"
+              >
+                <div class="gallery__photo-container gallery--photo-3"></div>
+              </a>
+            </div>
 
-        <div class="gallery__photo-row gallery__photo-row--second">
-          <div class="grid__item--desktop-1-8">
-            <a
-              href="https://namu.ua/"
-              class="gallery__link"
-              target="_blank"
-            >
-              <div class="gallery__photo-container gallery--photo-3"></div>
-            </a>
-          </div>
-
-          <div class="grid__item--desktop-9-12">
-            <a
-              href="https://namu.ua/"
-              class="gallery__link"
-              target="_blank"
-            >
-              <div class="gallery__photo-container gallery--photo-4"></div>
-            </a>
+            <div class="grid__item--desktop-9-12">
+              <a
+                href="https://namu.ua/"
+                class="gallery__link"
+                target="_blank"
+              >
+                <div class="gallery__photo-container gallery--photo-4"></div>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -391,17 +391,24 @@
     </div>
 
     <!-- SUBSCRIBE -->
-    <section class="subscribe" id="subscribe">
+    <div class="subscribe" id="subscribe">
       <div class="subscribe__description">
-        <div class="subscribe__title">Підписка</div>
-        <div class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+        <div class="subscribe__title">
+          Підписка
+        </div>
+
+        <div class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
       </div>
+
       <div class="subscribe__area">
         <form
           name="subscribe"
           action="#"
           method="get"
           class="subscribe__form"
+          onsubmit="this.reset(); return false;"
         >
 
           <div class="subscribe__input-container">
@@ -414,17 +421,16 @@
             >
           </div>
 
-          <button name="subscribe-button" class="subscribe__button">
-            <div class="subscribe__button-container">
-              <div class="subscribe__button-arrow"></div>
-            </div>
+          <button
+            name="subscribe-button"
+            class="subscribe__button">
           </button>
         </form>
       </div>
-    </section>
+    </div>
 
     <!-- FOOTER -->
-    <section class="footer" id="footer">
+    <div class="footer" id="footer">
       <div class="arc">
         <div class="footer__content">
           <div class="grid grid--screen">
@@ -541,37 +547,35 @@
               grid__item--tablet-2-5
               grid__item--desktop-8-11"
             >
-              <div class="nav-block nav-block--footer">
-                <ul class="nav-block__list">
-                  <div class="nav-block__group nav-block__group--footer">
-                    <li class="nav-block__item">
-                      <a href="#gallery" class="nav-block__link nav-block__link--footer">
-                        Галерея
-                      </a>
-                    </li>
+              <nav class="nav-block nav-block--footer">
+                <ul class="nav-block__list nav-block__list--footer">
+                  <li class="nav-block__item nav-block__item--footer">
+                    <a href="#gallery" class="nav-block__link nav-block__link--footer">
+                      Галерея
+                    </a>
+                  </li>
 
-                    <li class="nav-block__item">
-                      <a href="#events" class="nav-block__link nav-block__link--footer">
-                        Виставки та події
-                      </a>
-                    </li>
-                  </div>
-
-                  <div class="nav-block__group nav-block__group--footer">
-                    <li class="nav-block__item">
-                      <a href="#subscribe" class="nav-block__link nav-block__link--footer">
-                        Про нас
-                      </a>
-                    </li>
-
-                    <li class="nav-block__item">
-                      <a href="#contacts" class="nav-block__link nav-block__link--footer">
-                        Контакти
-                      </a>
-                    </li>
-                  </div>
+                  <li class="nav-block__item nav-block__item--footer">
+                    <a href="#events" class="nav-block__link nav-block__link--footer">
+                      Виставки та події
+                    </a>
+                  </li>
                 </ul>
-              </div>
+
+                <ul class="nav-block__list nav-block__list--footer">
+                  <li class="nav-block__item nav-block__item--footer">
+                    <a href="#subscribe" class="nav-block__link nav-block__link--footer">
+                      Про нас
+                    </a>
+                  </li>
+
+                  <li class="nav-block__item nav-block__item--footer">
+                    <a href="#contacts" class="nav-block__link nav-block__link--footer">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
             </div>
           </div>
 
@@ -581,6 +585,6 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
   </body>
 </html>
