complete header and menu layout

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,6 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="header__top-actions">
-        <a href="#menu" class="header__menu-opener icon"></a>
-      </div>
-
       <div class="header__content">
         <div class="header__bg">
           <a href="#" class="header__logo logo">
@@ -49,27 +45,108 @@
           </div>
         </div>
       </div>
+
+      <div class="container">
+        <div class="top-actions">
+          <a href="#menu" class="header__menu-opener icon"></a>
+        </div>
+      </div>
     </header>
 
-    <nav class="page__menu menu">
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="top-actions menu__top">
+            <a href="#" class="icon menu__cross"></a>
+          </div>
 
+          <div class="menu__blocks">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#subscribe" class="menu__link">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#events" class="menu__link">
+                  Виставки та
+                  <br>
+                  події
+                </a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+
+            <div class="menu__splitter">
+            </div>
+
+            <div class="menu__shedule">
+              <h4 class="menu__shedule-tittle">
+                Графік роботи
+              </h4>
+
+              <div class="menu__shedule-content">
+                <ul class="menu__open-days">
+                  <li class="menu__shedule-day">
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
+
+                  <li class="menu__shedule-day">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
+
+                  <li class="menu__shedule-day">
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
+
+                  <li class="menu__shedule-day">
+                    <strong>11:00 — 19:00</strong> субота
+                  </li>
+
+                  <li class="menu__shedule-day">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </li>
+                </ul>
+
+                <div class="menu__days-off">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </nav>
 
     <main class="page__content">
-      <section class="page__section events">
+      <section class="page__section events" id="events">
 
       </section>
 
-      <section class="page__section gallery">
+      <section class="page__section gallery" id="gallery">
 
       </section>
 
-      <section class="page__section subscribe">
+      <section class="page__section subscribe" id="subscribe">
 
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="contacts">
 
     </footer>
   </body>
