add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
     </header>
 
     <main>
-      <div class="conteiner">
+      <div class="container">
         <div id="actual" class="events">
           <h2 class="events__name title">Актуальні події</h2>
           <section  class="events__conteiner">
@@ -157,7 +157,7 @@
         >
       </div>
 
-      <div class="conteiner">
+      <div class="container">
         <section id="gallery" class="gallery">
           <h3 class="gallery__title title">Галерея</h3>
 
@@ -184,12 +184,13 @@
             >
           </div>
           <div class="gallery__items">
-            <span class="gallery__item"></span>
+            <span class="gallery__item active"></span>
             <span class="gallery__item"></span>
             <span class="gallery__item"></span>
             <span class="gallery__item"></span>
           </div>
         </section>
+
       </div>
 
       <section class="subscription">
@@ -215,60 +216,63 @@
     <footer id="footer">
       <div class="container">
         <div class="footer">
-          <section class="footer__icons">
-            <a class="footer__logo" href="#">
-              <img src="images/logo-museum.png" alt="logo muzeum">
-            </a>
-
-            <div class="footer__socials">
-              <a
-                target="_blank"
-                href="https://www.facebook.com/namu.museum/"
-                class="footer__social"
-              >
-                <img src="./images/icons/Facebook.png" alt="Facebook">
+          <div class="footer__top">
+            <section class="footer__icons">
+              <a class="footer__logo" href="#">
+                <img src="images/logo-museum.png" alt="logo muzeum">
               </a>
 
-              <a
-                target="_blank"
-                href="https://www.instagram.com/namu.museum/"
-                class="footer__social"
-              >
-                <img src="./images/icons/instagram.png" alt="instagram">
-              </a>
-            </div>
-          </section>
+              <div class="footer__socials">
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/namu.museum/"
+                  class="footer__social"
+                >
+                  <img src="./images/icons/Facebook.png" alt="Facebook">
+                </a>
 
-          <section class="footer__data">
-            <section class="footer__graph">
-              <h4 class="footer__title title4">Графік роботи</h4>
-
-              <p class="footer__time-work">
-                <strong>12:00— 20:00</strong> середа <br>
-                <strong>12:00 — 20:00</strong> четвер <br>
-                <strong>12:00 — 20:00</strong> п’ятниця <br>
-                <strong>11:00 — 19:00</strong> субота <br>
-                <strong>11:00 — 19:00</strong> неділя
-              </p>
-
-              <p class="footer__holiday">
-                Вихідні понеділок, вівторок
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/namu.museum/"
+                  class="footer__social"
+                >
+                  <img src="./images/icons/instagram.png" alt="instagram">
+                </a>
+              </div>
             </section>
 
-            <section class="footer__contacts">
-              <h4 class="footer__title title4">Контакти:</h4>
+            <section class="footer__data">
+              <section class="footer__graph">
+                <h4 class="footer__title title4">Графік роботи</h4>
 
-              <p class="footer__address">
-                вул. М. Грушевського, 6; Київ, 01001
-                тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54
-                e-mail: info@namu.kiev.ua
-              </p>
+                <p class="footer__time-work">
+                  <strong>12:00— 20:00</strong> середа <br>
+                  <strong>12:00 — 20:00</strong> четвер <br>
+                  <strong>12:00 — 20:00</strong> п’ятниця <br>
+                  <strong>11:00 — 19:00</strong> субота <br>
+                  <strong>11:00 — 19:00</strong> неділя
+                </p>
+
+                <p class="footer__holiday">
+                  Вихідні понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </section>
+
+              <section class="footer__contacts">
+                <h4 class="footer__title title4">Контакти:</h4>
+
+                <p class="footer__address">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  тел. +38 (044) 278-13-57
+                  факс +38 (044) 278-74-54 <br>
+                  e-mail: info@namu.kiev.ua
+                </p>
+              </section>
             </section>
-          </section>
+          </div>
+
 
           <a href="#header" class="footer__circle"></a>
 
