add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
                 alt="current-2"
               >
               <div class="events__description">
-                <div class="events__exhibition-card">
+                <div class="events__exhibition-block">
                   <span class="events__exhibition">ВИСТАВКА</span>
 
                   <a class="events__link" href="#">26.08-29.11.2019</a>
