--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
               grid__item--tablet-4-5
               grid__item--desktop-7-7
               logo"
-              href="https://www.facebook.com/namu.museum"
+              href="#home"
             >
             NA <br> MU  
           </a>
@@ -384,7 +384,7 @@
           </div>
           <form 
             class="subscription__form"
-            id="form"
+            id="myForm"
             method="get"
             action="javascript:void(0);"
           >
@@ -398,11 +398,22 @@
               >
             </label>
             <button 
+              onclick="submitForm()"
+              id="btnsubmit"
               class="subscription__button"
               type="submit"
+              value="Submit"
             >
             </button>
           </form>
+          <script type="text/javascript">
+            const form = document.getElementById('myForm');
+
+            form.addEventListener('submit', function handleSubmit(event) {
+              event.preventDefault();
+              form.reset();
+            });
+          </script>
         </div>
       </section>
     </menu>
