add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,10 @@
     <main>
       <div class="container">
         <div id="actual" class="events">
+          <span class="events__before">ПОДІЇ</span>
+
           <h2 class="events__name title">Актуальні події</h2>
+
           <section  class="events__conteiner">
             <div class="events__block">
               <img
@@ -149,12 +152,6 @@
 
           <h3 class="events__card-title tile3">Від класицизму до романтизму</h3>
         </div>
-
-        <img
-        class="events__depiction-img"
-        src="images/current-3.png"
-        alt="current-1"
-        >
       </div>
 
       <div class="container">
